# fastapi-async-template

./: pyproject.toml  sample.env
app/: main.py
app/api/: main.py
app/api/dependencies/: auth.py  db.py
app/api/routers/: login.py  users.py
app/core/: db.py  security.py  settings.py
app/crud/: users.py
app/migrations/: env.py
app/migrations/versions/: 87a10b26a41c_add_user.py
app/models/: __init__.py  user.py
app/schemas/: auth.py  user.py
